Allow rating label "click to review" to wrap" prevents breaking words mid statement

--- a/src/amo/components/RatingManager/styles.scss
+++ b/src/amo/components/RatingManager/styles.scss
@@ -3,6 +3,7 @@
 .RatingManager-ratingControl {
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   position: relative;
 }
 
